src/objects/Service_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Field Mappings</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api_name__c</fullName>
        <label>api name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delegate_class__c</fullName>
        <label>delegate class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Service Setting</label>
</CustomObject>